k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dragon-scale-studio
  namespace: dragon-scale-studio
  labels:
    app.kubernetes.io/name: dragon-scale-studio
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: dragon-scale-studio
